--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Requests, JSON, and NLP\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Priyanka Naskar\n",
+    "## Date : 11/14/2024\n",
+    "## GitHub : https://github.com/Priyankanaskar/Webmining-NLP_module_o4\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -28,14 +30,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All prereqs installed.\n",
+      "Package            Version\n",
+      "------------------ ------------\n",
+      "annotated-types    0.7.0\n",
+      "asttokens          2.4.1\n",
+      "blis               1.0.1\n",
+      "catalogue          2.0.10\n",
+      "certifi            2024.8.30\n",
+      "charset-normalizer 3.4.0\n",
+      "click              8.1.7\n",
+      "cloudpathlib       0.20.0\n",
+      "colorama           0.4.6\n",
+      "comm               0.2.2\n",
+      "confection         0.1.5\n",
+      "cymem              2.0.8\n",
+      "debugpy            1.6.7\n",
+      "decorator          5.1.1\n",
+      "exceptiongroup     1.2.2\n",
+      "executing          2.1.0\n",
+      "filelock           3.16.1\n",
+      "fsspec             2024.10.0\n",
+      "huggingface-hub    0.26.2\n",
+      "idna               3.10\n",
+      "importlib_metadata 8.5.0\n",
+      "ipykernel          6.29.5\n",
+      "ipython            8.29.0\n",
+      "jedi               0.19.2\n",
+      "Jinja2             3.1.4\n",
+      "joblib             1.4.2\n",
+      "jupyter_client     8.6.3\n",
+      "jupyter_core       5.7.2\n",
+      "langcodes          3.4.1\n",
+      "language_data      1.2.0\n",
+      "marisa-trie        1.2.1\n",
+      "markdown-it-py     3.0.0\n",
+      "MarkupSafe         3.0.2\n",
+      "matplotlib-inline  0.1.7\n",
+      "mdurl              0.1.2\n",
+      "mpmath             1.3.0\n",
+      "murmurhash         1.0.10\n",
+      "nest_asyncio       1.6.0\n",
+      "networkx           3.4.2\n",
+      "nltk               3.9.1\n",
+      "numpy              2.0.2\n",
+      "packaging          24.2\n",
+      "parso              0.8.4\n",
+      "pickleshare        0.7.5\n",
+      "pip                24.3.1\n",
+      "platformdirs       4.3.6\n",
+      "preshed            3.0.9\n",
+      "prompt_toolkit     3.0.48\n",
+      "psutil             5.9.0\n",
+      "pure_eval          0.2.3\n",
+      "pydantic           2.9.2\n",
+      "pydantic_core      2.23.4\n",
+      "Pygments           2.18.0\n",
+      "python-dateutil    2.9.0\n",
+      "pywin32            305.1\n",
+      "PyYAML             6.0.2\n",
+      "pyzmq              25.1.2\n",
+      "regex              2024.11.6\n",
+      "requests           2.32.3\n",
+      "rich               13.9.4\n",
+      "safetensors        0.4.5\n",
+      "setuptools         75.1.0\n",
+      "shellingham        1.5.4\n",
+      "six                1.16.0\n",
+      "smart-open         7.0.5\n",
+      "spacy              3.8.2\n",
+      "spacy-legacy       3.0.12\n",
+      "spacy-loggers      1.0.5\n",
+      "spacytextblob      5.0.0\n",
+      "srsly              2.4.8\n",
+      "stack-data         0.6.2\n",
+      "sympy              1.13.1\n",
+      "textblob           0.18.0.post0\n",
+      "thinc              8.3.2\n",
+      "tokenizers         0.20.3\n",
+      "torch              2.5.1\n",
+      "tornado            6.4.1\n",
+      "tqdm               4.67.0\n",
+      "traitlets          5.14.3\n",
+      "transformers       4.46.2\n",
+      "typer              0.13.0\n",
+      "typing_extensions  4.12.2\n",
+      "urllib3            2.2.3\n",
+      "vaderSentiment     3.3.2\n",
+      "wasabi             1.1.3\n",
+      "wcwidth            0.2.13\n",
+      "weasel             0.4.1\n",
+      "wheel              0.44.0\n",
+      "wrapt              1.16.0\n",
+      "zipp               3.21.0\n",
+      "Data has been written to lyrics.json\n"
+     ]
+    }
+   ],
    "source": [
-    "import requests\n",
-    "import json\n",
+    "# Create and activate a Python virtual environment. \n",
+    "# Before starting the project, try all these imports FIRST\n",
+    "# Address any errors you get running this code cell \n",
+    "# by installing the necessary packages into your active Python environment.\n",
+    "# Try to resolve issues using your materials and the web.\n",
+    "# If that doesn't work, ask for help in the discussion forums.\n",
+    "# You can't complete the exercises until you import these - start early! \n",
+    "# We also import json and pickle (included in the Python Standard Library).\n",
     "\n",
-    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul').text)\n"
+    "import json\n",
+    "import pickle\n",
+    "\n",
+    "import requests\n",
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "print('All prereqs installed.')\n",
+    "!pip list\n",
+    "\n",
+    "\n",
+    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul').text)\n",
+    "\n",
+    "# Define the file path and name for saving\n",
+    "file_path = 'lyrics.json'\n",
+    "\n",
+    "# Write the data to a JSON file\n",
+    "with open(file_path, 'w') as file:\n",
+    "    json.dump(result, file, indent=4)\n",
+    "\n",
+    "print(f\"Data has been written to {file_path}\")"
    ]
   },
   {
@@ -46,11 +175,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sentiment Analysis on Song Lyrics Using SpaCy and SpaCyTextBlob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This code block demonstrates how to load song lyrics from a JSON file, extract and display the lyrics, and perform sentiment analysis to determine their polarity score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lyrics': 'This is a sample song lyric.'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "  \"lyrics\": \"This is a sample song lyric.\"\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
