--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -52,15 +52,11 @@
       "comm               0.2.2\n",
       "confection         0.1.5\n",
       "cymem              2.0.8\n",
-      "debugpy            1.6.7\n",
+      "debugpy            1.8.8\n",
       "decorator          5.1.1\n",
-      "exceptiongroup     1.2.2\n",
+      "en_core_web_sm     3.8.0\n",
       "executing          2.1.0\n",
-      "filelock           3.16.1\n",
-      "fsspec             2024.10.0\n",
-      "huggingface-hub    0.26.2\n",
       "idna               3.10\n",
-      "importlib_metadata 8.5.0\n",
       "ipykernel          6.29.5\n",
       "ipython            8.29.0\n",
       "jedi               0.19.2\n",
@@ -75,33 +71,28 @@
       "MarkupSafe         3.0.2\n",
       "matplotlib-inline  0.1.7\n",
       "mdurl              0.1.2\n",
-      "mpmath             1.3.0\n",
       "murmurhash         1.0.10\n",
-      "nest_asyncio       1.6.0\n",
-      "networkx           3.4.2\n",
+      "nest-asyncio       1.6.0\n",
       "nltk               3.9.1\n",
       "numpy              2.0.2\n",
       "packaging          24.2\n",
       "parso              0.8.4\n",
-      "pickleshare        0.7.5\n",
-      "pip                24.3.1\n",
+      "pip                24.0\n",
       "platformdirs       4.3.6\n",
       "preshed            3.0.9\n",
       "prompt_toolkit     3.0.48\n",
-      "psutil             5.9.0\n",
+      "psutil             6.1.0\n",
       "pure_eval          0.2.3\n",
       "pydantic           2.9.2\n",
       "pydantic_core      2.23.4\n",
       "Pygments           2.18.0\n",
-      "python-dateutil    2.9.0\n",
-      "pywin32            305.1\n",
-      "PyYAML             6.0.2\n",
-      "pyzmq              25.1.2\n",
+      "python-dateutil    2.9.0.post0\n",
+      "pywin32            308\n",
+      "pyzmq              26.2.0\n",
       "regex              2024.11.6\n",
       "requests           2.32.3\n",
       "rich               13.9.4\n",
-      "safetensors        0.4.5\n",
-      "setuptools         75.1.0\n",
+      "setuptools         75.5.0\n",
       "shellingham        1.5.4\n",
       "six                1.16.0\n",
       "smart-open         7.0.5\n",
@@ -110,26 +101,34 @@
       "spacy-loggers      1.0.5\n",
       "spacytextblob      5.0.0\n",
       "srsly              2.4.8\n",
-      "stack-data         0.6.2\n",
-      "sympy              1.13.1\n",
+      "stack-data         0.6.3\n",
       "textblob           0.18.0.post0\n",
       "thinc              8.3.2\n",
-      "tokenizers         0.20.3\n",
-      "torch              2.5.1\n",
       "tornado            6.4.1\n",
       "tqdm               4.67.0\n",
       "traitlets          5.14.3\n",
-      "transformers       4.46.2\n",
       "typer              0.13.0\n",
       "typing_extensions  4.12.2\n",
       "urllib3            2.2.3\n",
-      "vaderSentiment     3.3.2\n",
       "wasabi             1.1.3\n",
       "wcwidth            0.2.13\n",
       "weasel             0.4.1\n",
-      "wheel              0.44.0\n",
-      "wrapt              1.16.0\n",
-      "zipp               3.21.0\n",
+      "wrapt              1.16.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Data has been written to lyrics.json\n"
      ]
     }
@@ -178,36 +177,221 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sentiment Analysis on Song Lyrics Using SpaCy and SpaCyTextBlob"
+    "**Sentimental analysis on song using Lyrics**\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This code block demonstrates how to load song lyrics from a JSON file, extract and display the lyrics, and perform sentiment analysis to determine their polarity score"
+    "This code block demonstrates how to load song lyrics from a JSON file, extract and display the lyrics, and perform sentiment analysis to determine their polarity score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'lyrics': 'This is a sample song lyric.'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lyrics:\n",
+      " I'm your only friend \n",
+      "I'm not your only friend \n",
+      "But I'm a little glowing friend \n",
+      "But really I'm not actually your friend \n",
+      "But I am \n",
+      "\n",
+      "\n",
+      "Blue canary in the outlet by the light switch \n",
+      "\n",
+      "Who watches over you \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "\n",
+      "\n",
+      "I have a secret to tell \n",
+      "\n",
+      "From my electrical well \n",
+      "\n",
+      "It's a simple message and I'm leaving out the whistles and bells \n",
+      "\n",
+      "So the room must listen to me \n",
+      "\n",
+      "Filibuster vigilantly \n",
+      "\n",
+      "My name is blue canary one note* spelled l-i-t-e \n",
+      "\n",
+      "My story's infinite \n",
+      "\n",
+      "Like the Longines Symphonette it doesn't rest \n",
+      "\n",
+      "\n",
+      "\n",
+      "Blue canary in the outlet by the light switch \n",
+      "\n",
+      "Who watches over you \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "\n",
+      "\n",
+      "I'm your only friend \n",
+      "\n",
+      "I'm not your only friend \n",
+      "\n",
+      "But I'm a little glowing friend \n",
+      "\n",
+      "But really I'm not actually your friend \n",
+      "\n",
+      "But I am \n",
+      "\n",
+      "\n",
+      "\n",
+      "There's a picture opposite me \n",
+      "\n",
+      "Of my primitive ancestry \n",
+      "\n",
+      "Which stood on rocky shores and kept the beaches shipwreck free \n",
+      "\n",
+      "Though I respect that a lot \n",
+      "\n",
+      "I'd be fired if that were my job \n",
+      "\n",
+      "After killing Jason off and countless screaming Argonauts \n",
+      "\n",
+      "Bluebird of friendliness \n",
+      "\n",
+      "Like guardian angels its always near \n",
+      "\n",
+      "\n",
+      "\n",
+      "Blue canary in the outlet by the light switch \n",
+      "\n",
+      "Who watches over you \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "\n",
+      "\n",
+      "(and while you're at it \n",
+      "\n",
+      "Keep the nightlight on inside the \n",
+      "\n",
+      "Birdhouse in your soul) \n",
+      "\n",
+      "\n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "\n",
+      "\n",
+      "Blue canary in the outlet by the light switch (and while you're at it) \n",
+      "\n",
+      "Who watches over you (keep the nightlight on inside the) \n",
+      "\n",
+      "Make a little birdhouse in your soul (birdhouse in your soul) \n",
+      "\n",
+      "\n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul \n",
+      "\n",
+      "\n",
+      "\n",
+      "Blue canary in the outlet by the light switch (and while you're at it) \n",
+      "\n",
+      "Who watches over you (keep the nightlight on inside the) \n",
+      "\n",
+      "Make a little birdhouse in your soul (birdhouse in your soul) \n",
+      "\n",
+      "\n",
+      "\n",
+      "Not to put too fine a point on it \n",
+      "\n",
+      "Say I'm the only bee in your bonnet \n",
+      "\n",
+      "Make a little birdhouse in your soul\n",
+      "Polarity score: 0.04505208333333333\n",
+      "The sentiment of the lyrics is positive.\n"
+     ]
     }
    ],
    "source": [
-    "{\n",
-    "  \"lyrics\": \"This is a sample song lyric.\"\n",
-    "}\n"
+    "import json\n",
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "# Load SpaCy and add SpaCyTextBlob for sentiment analysis\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "# Load the contents of the JSON file\n",
+    "file_path = 'lyrics.json'  # Replace with the actual path to your JSON file\n",
+    "try:\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"File not found: {file_path}\")\n",
+    "    exit()\n",
+    "\n",
+    "# Extract and print the lyrics of the song\n",
+    "lyrics = data.get('lyrics', '')\n",
+    "if not lyrics:\n",
+    "    print(\"No lyrics found in the JSON file.\")\n",
+    "    exit()\n",
+    "\n",
+    "print(\"Lyrics:\\n\", lyrics)\n",
+    "\n",
+    "# Perform sentiment analysis on the lyrics\n",
+    "doc = nlp(lyrics)\n",
+    "polarity = doc._.blob.polarity\n",
+    "\n",
+    "# Print the polarity score\n",
+    "print(\"Polarity score:\", polarity)\n",
+    "\n",
+    "# Comment on the sentiment\n",
+    "if polarity > 0:\n",
+    "    sentiment = \"positive\"\n",
+    "elif polarity < 0:\n",
+    "    sentiment = \"negative\"\n",
+    "else:\n",
+    "    sentiment = \"neutral\"\n",
+    "\n",
+    "print(f\"The sentiment of the lyrics is {sentiment}.\")\n",
+    "\n",
+    "# Comment in the code:\n",
+    "# The polarity score ranges from [-1.0, 1.0]. A positive score indicates positive sentiment,\n",
+    "# a negative score indicates negative sentiment, and a score of 0 indicates neutral sentiment.\n",
+    "# Based on the polarity score calculated above, we can infer whether the lyrics have a more \n",
+    "# positive or negative connotation.\n"
    ]
   },
   {
@@ -218,17 +402,161 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " Function to Fetch and Save Song Lyrics to JSON Files\n",
+    "This code block defines a function to retrieve lyrics for a specified song by an artist using the lyrics.ovh API. The lyrics are then saved to a JSON file. After defining the function, it is tested with four different songs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lyrics for 'Stick Season' by Noah Kahan saved to 'stick_season.json'.\n",
+      "Lyrics for '28' by Zach Bryan saved to '28.json'.\n",
+      "Lyrics for 'Maine' by Noah Kahan saved to 'maine.json'.\n",
+      "Lyrics for 'Open the Gate' by Zach Bryan saved to 'open_gate.json'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fetch_and_save_lyrics(artist, song, filename):\n",
+    "    \"\"\"\n",
+    "    Fetches lyrics for a specified song by a specified artist from lyrics.ovh API\n",
+    "    and saves the results to a specified JSON file.\n",
+    "    \"\"\"\n",
+    "    # Fetch data from the API\n",
+    "    response = requests.get(f'https://api.lyrics.ovh/v1/{artist}/{song}')\n",
+    "    response.raise_for_status()  # Check if request was successful\n",
+    "    data = response.json()\n",
+    "\n",
+    "    # Write the data to a JSON file\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(data, file, indent=4)\n",
+    "\n",
+    "    print(f\"Lyrics for '{song}' by {artist} saved to '{filename}'.\")\n",
+    "\n",
+    "# Testing the function with four different songs\n",
+    "fetch_and_save_lyrics(\"Noah Kahan\", \"Stick Season\", \"stick_season.json\")\n",
+    "fetch_and_save_lyrics(\"Zach Bryan\", \"28\", \"28.json\")\n",
+    "fetch_and_save_lyrics(\"Noah Kahan\", \"Maine\", \"maine.json\")\n",
+    "fetch_and_save_lyrics(\"Zach Bryan\", \"Open the Gate\", \"open_gate.json\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score.  Use this function to print the polarity scores (with the name of the song) of the three files you created in question 3.  Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be?  Answer the questions in either a comment in the code cell or a markdown cell under the code cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code block demonstrates how to perform sentiment analysis on song lyrics stored in JSON files. The analyze_sentiment_from_file function reads the lyrics from a specified file, calculates the polarity score using spaCyTextBlob, and returns the score. It then tests the function with several songs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity score for 'Stick Season': 0.04111721611721612\n",
+      "Polarity score for 'Main': -0.12142857142857141\n",
+      "Polarity score for 'Open the Gate': 0.10889724310776941\n",
+      "Polarity score for '28': 0.18259259259259256\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The Polarity score for all of these songs are different then what I would have expected. Esspecially for the song \"Maine\", in the lyrics he \\nexplains how Maines climate is not enjoyable, but he still wants to go there. The general tune of these songs also changes my perception of the \\npolarity scores. Since spacytextblob is not taking this into account I could see how the polarity scores may be different than I expected. \\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load SpaCy and add SpaCyTextBlob\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "def analyze_sentiment_from_file(filename):\n",
+    "    \"\"\"\n",
+    "    Analyzes the sentiment of lyrics from a specified file containing song lyrics\n",
+    "    and returns the polarity score.\n",
+    "    \"\"\"\n",
+    "    # Load the lyrics data from the file\n",
+    "    with open(filename, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    # Extract the lyrics from the data\n",
+    "    lyrics = data.get('lyrics', '')\n",
+    "\n",
+    "    # Perform sentiment analysis on the lyrics\n",
+    "    doc = nlp(lyrics)\n",
+    "    polarity = doc._.blob.polarity\n",
+    "\n",
+    "    # Return the polarity score\n",
+    "    return polarity\n",
+    "\n",
+    "\n",
+    "# Testing the function on the files created in question 3\n",
+    "songs = [\n",
+    "    (\"Stick Season\", \"stick_season.json\"),\n",
+    "    (\"Main\", \"maine.json\"),\n",
+    "    (\"Open the Gate\", \"open_gate.json\"),\n",
+    "    (\"28\", \"28.json\")\n",
+    "]\n",
+    "\n",
+    "# Print the polarity score for each song\n",
+    "for song, filename in songs:\n",
+    "    polarity = analyze_sentiment_from_file(filename)\n",
+    "    if polarity is not None:\n",
+    "        print(f\"Polarity score for '{song}': {polarity}\")\n",
+    "\n",
+    "\"\"\"The Polarity score for all of these songs are different then what I would have expected. Esspecially for the song \"Maine\", in the lyrics he \n",
+    "explains how Maines climate is not enjoyable, but he still wants to go there. The general tune of these songs also changes my perception of the \n",
+    "polarity scores. Since spacytextblob is not taking this into account I could see how the polarity scores may be different than I expected. \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert !jupyter nbconvert --to html requests-json-nlp.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook requests-json-nlp.ipynb to html\n",
+      "[NbConvertApp] Writing 303875 bytes to requests-json-nlp.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html requests-json-nlp.ipynb"
    ]
   },
   {
@@ -241,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
