--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -30,14 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All prereqs installed.\n",
+      "All prereqs installed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Package            Version\n",
       "------------------ ------------\n",
       "annotated-types    0.7.0\n",
@@ -113,22 +128,7 @@
       "wasabi             1.1.3\n",
       "wcwidth            0.2.13\n",
       "weasel             0.4.1\n",
-      "wrapt              1.16.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "wrapt              1.16.0\n",
       "Data has been written to lyrics.json\n"
      ]
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "'The Polarity score for all of these songs are different then what I would have expected. Esspecially for the song \"Maine\", in the lyrics he \\nexplains how Maines climate is not enjoyable, but he still wants to go there. The general tune of these songs also changes my perception of the \\npolarity scores. Since spacytextblob is not taking this into account I could see how the polarity scores may be different than I expected. \\n'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -557,20 +557,13 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook requests-json-nlp.ipynb to html\n",
-      "[NbConvertApp] Writing 303878 bytes to requests-json-nlp.html\n"
+      "[NbConvertApp] Writing 304372 bytes to requests-json-nlp.html\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert --to html requests-json-nlp.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
